--- a/App/packages.config
+++ b/App/packages.config
@@ -5,4 +5,5 @@
   <package id="Fody" version="4.2.1" targetFramework="net472" developmentDependency="true" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Resource.Embedder" version="2.0.0" targetFramework="net472" />
 </packages>
