--- a/App/App.csproj
+++ b/App/App.csproj
@@ -85,6 +85,7 @@
     </ApplicationDefinition>
     <Compile Include="Logic\AppSettings.cs" />
     <Compile Include="Logic\AtomicBoolean.cs" />
+    <Compile Include="Logic\Converters\RecordingStateToStringConverter.cs" />
     <Compile Include="Logic\KeyMappingsHandler.cs" />
     <Compile Include="Logic\NotifyIconHolder.cs" />
     <Compile Include="Logic\Provider.cs" />
