--- a/App/packages.config
+++ b/App/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdonisUI" version="1.10.0" targetFramework="net472" />
+  <package id="AdonisUI.ClassicTheme" version="1.10.0" targetFramework="net472" />
   <package id="Autofac" version="4.9.2" targetFramework="net472" />
   <package id="Costura.Fody" version="3.3.3" targetFramework="net472" />
   <package id="Fody" version="4.2.1" targetFramework="net472" developmentDependency="true" />
