--- a/App/App.csproj
+++ b/App/App.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Logic\AtomicBoolean.cs" />
     <Compile Include="Logic\Converters\KeyToRepresentationConverter.cs" />
     <Compile Include="Logic\Converters\RecordingStateToStringConverter.cs" />
+    <Compile Include="Logic\JsonModels\ExportedMappings.cs" />
     <Compile Include="Logic\KeyMappingsHandler.cs" />
     <Compile Include="Logic\NotifyIconHolder.cs" />
     <Compile Include="Logic\Provider.cs" />
